# poc-ai-agent-learning

./: README.md
place-recommend-ai/: README.md  main.py  pyproject.toml
place-recommend-ai/scripts/: tmp.py  tmp.sh
tutorial/: main.py  pyproject.toml
tutorial/scripts/: step_1.py  step_2.py
